@@ -17,6 +17,7 @@ import org.apache.commons.lang3.StringUtils;
 
 import org.apache.commons.fileupload.FileItem;
 
+import org.sakaiproject.portal.api.PortalConstants;
 import org.sakaiproject.webapi.beans.DashboardRestBean;
 import org.sakaiproject.announcement.api.AnnouncementMessage;
 import org.sakaiproject.announcement.api.AnnouncementService;
@@ -24,7 +25,13 @@ import org.sakaiproject.announcement.api.ViewableFilter;
 import org.sakaiproject.authz.api.SecurityService;
 import org.sakaiproject.component.api.ServerConfigurationService;
 import org.sakaiproject.content.api.ContentHostingService;
+import org.sakaiproject.content.api.ContentResource;
 import org.sakaiproject.content.api.ContentResourceEdit;
+import org.sakaiproject.entity.api.Entity;
+import org.sakaiproject.entity.api.EntityManager;
+import org.sakaiproject.entity.api.EntityProducer;
+import org.sakaiproject.entity.api.EntityTransferrer;
+import org.sakaiproject.entity.api.Reference;
 import org.sakaiproject.event.api.NotificationService;
 import org.sakaiproject.exception.IdUnusedException;
 import org.sakaiproject.exception.PermissionException;
@@ -57,10 +64,11 @@ import javax.annotation.PostConstruct;
 import javax.annotation.Resource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -68,13 +76,21 @@ import lombok.extern.slf4j.Slf4j;
  */
 @Slf4j
 @RestController
-public class DashboardController extends AbstractSakaiApiController {
+public class DashboardController extends AbstractSakaiApiController implements EntityProducer, EntityTransferrer {
+
+    private static final String DASHBOARD_TOOL_ID = "sakai.dashboard";
+    private static final String REFERENCE_ROOT = Entity.SEPARATOR + "dashboard";
+    private static final String COURSE_IMAGE = "course_image";
+    private static final String COURSE_IMAGE_FILE = COURSE_IMAGE + ".png";
 
 	@Resource
 	private AnnouncementService announcementService;
 
 	@Resource
 	private ContentHostingService contentHostingService;
+
+	@Resource
+	private EntityManager entityManager;
 
 	@Resource
 	private SecurityService securityService;
@@ -103,40 +119,48 @@ public class DashboardController extends AbstractSakaiApiController {
     @PostConstruct
     public void init() {
 
+        boolean tasksEnabled = serverConfigurationService.getBoolean(PortalConstants.PROP_DASHBOARD_TASKS_ENABLED, false);
+
         // Load up all the available widgets, from properties
-        String[] courseWidgetsArray = serverConfigurationService.getStrings("dashboard.course.widgets");
-        if (courseWidgetsArray == null) {
-            courseWidgetsArray = new String[] {"tasks", "announcements", "calendar","forums", "grades" };
+        courseWidgets = new ArrayList<>(serverConfigurationService.getStringList("dashboard.course.widgets", null));
+        if (courseWidgets.isEmpty()) {
+            courseWidgets = new ArrayList<>(List.of("tasks", "announcements", "calendar","forums", "grades"));
         }
-        courseWidgets = Arrays.asList(courseWidgetsArray);
+        if (!tasksEnabled) courseWidgets.remove("tasks");
 
-        String[] homeWidgetsArray = serverConfigurationService.getStrings("dashboard.home.widgets");
-        if (homeWidgetsArray == null) {
-            homeWidgetsArray = new String[] { "tasks", "announcements", "calendar","forums", "grades" };
+        homeWidgets = new ArrayList<>(serverConfigurationService.getStringList("dashboard.home.widgets", null));
+        if (homeWidgets.isEmpty()) {
+            homeWidgets = new ArrayList<>(List.of("tasks", "announcements", "calendar","forums", "grades"));
         }
-        homeWidgets = Arrays.asList(homeWidgetsArray);
+        if (!tasksEnabled) homeWidgets.remove("tasks");
 
-        defaultHomeLayout = Arrays.asList(new String[] { "tasks","announcements", "calendar", "grades", "forums" });
+        defaultHomeLayout = new ArrayList<>(List.of("tasks","announcements", "calendar", "grades", "forums"));
+        if (!tasksEnabled) defaultHomeLayout.remove("tasks");
 
-        String[] courseWidgetLayout1 = serverConfigurationService.getStrings("dashboard.course.widget.layout1");
+        List<String> courseWidgetLayout1 = new ArrayList<>(serverConfigurationService.getStringList("dashboard.course.widget.layout1", null));
         if (courseWidgetLayout1 == null) {
-            courseWidgetLayout1 = new String[] {"tasks", "calendar", "announcements", "grades" };
+            courseWidgetLayout1 = new ArrayList<>(List.of("tasks", "calendar", "announcements", "grades"));
         }
-        defaultWidgetLayouts.put("1", Arrays.asList(courseWidgetLayout1));
+        if (!tasksEnabled) courseWidgetLayout1.remove("tasks");
+        defaultWidgetLayouts.put("1", courseWidgetLayout1);
 
-        String[] courseWidgetLayout2 = serverConfigurationService.getStrings("dashboard.course.widget.layout2");
+        List<String> courseWidgetLayout2 = new ArrayList<>(serverConfigurationService.getStringList("dashboard.course.widget.layout2", null));
         if (courseWidgetLayout2 == null) {
-            courseWidgetLayout2 = new String[] {"tasks", "calendar", "forums", "grades", "announcements" };
+            courseWidgetLayout2 = new ArrayList<>(List.of("tasks", "calendar", "forums", "grades", "announcements"));
         }
-        defaultWidgetLayouts.put("2", Arrays.asList(courseWidgetLayout2));
+        if (!tasksEnabled) courseWidgetLayout2.remove("tasks");
+        defaultWidgetLayouts.put("2", courseWidgetLayout2);
 
-        String[] courseWidgetLayout3 = serverConfigurationService.getStrings("dashboard.course.widget.layout3");
+        List<String> courseWidgetLayout3 = new ArrayList<>(serverConfigurationService.getStringList("dashboard.course.widget.layout3", null));
         if (courseWidgetLayout3 == null) {
-            courseWidgetLayout3 = new String[] {"tasks", "calendar", "announcements", "grades", "forums" };
+            courseWidgetLayout3 = new ArrayList<>(List.of("tasks", "calendar", "announcements", "grades", "forums"));
         }
-        defaultWidgetLayouts.put("3", Arrays.asList(courseWidgetLayout3));
+        if (!tasksEnabled) courseWidgetLayout3.remove("tasks");
+        defaultWidgetLayouts.put("3", courseWidgetLayout3);
 
         maxNumberMotd = serverConfigurationService.getInt("dashboard.home.motd.display", 1);
+
+        entityManager.registerEntityProducer(this, REFERENCE_ROOT);
     }
 
 	@GetMapping(value = "/users/{userId}/dashboard", produces = MediaType.APPLICATION_JSON_VALUE)
@@ -197,7 +221,11 @@ public class DashboardController extends AbstractSakaiApiController {
             bean.setLayout(defaultHomeLayout);
         } else {
             try {
-                bean.setLayout((new ObjectMapper()).readValue(layoutJson, ArrayList.class));
+                List<String> layout = (new ObjectMapper()).readValue(layoutJson, ArrayList.class);
+                if (!serverConfigurationService.getBoolean(PortalConstants.PROP_DASHBOARD_TASKS_ENABLED, false))  {
+                    layout.remove("tasks");
+                }
+                bean.setLayout(layout);
             } catch (Exception e) {
                 log.warn("Failed to deserialise widget layout from {}", layoutJson);
             }
@@ -215,13 +243,28 @@ public class DashboardController extends AbstractSakaiApiController {
             return;
         }
 
+        PreferencesEdit preference = null;
         try {
-            PreferencesEdit prefs = preferencesService.edit(userId);
-            ResourcePropertiesEdit props = prefs.getPropertiesEdit("dashboard-config");
-            props.addProperty("layout", (new ObjectMapper()).writeValueAsString(bean.getLayout()));
-            preferencesService.commit(prefs);
+            try {
+                preference = preferencesService.edit(userId);
+            } catch (IdUnusedException iue) {
+                preference = preferencesService.add(userId);
+            }
         } catch (Exception e) {
-            e.printStackTrace();
+            log.warn("Could not get the preferences for user [{}], {}", userId, e.toString());
+        }
+
+        if (preference != null) {
+            try {
+                ResourcePropertiesEdit props = preference.getPropertiesEdit("dashboard-config");
+                props.addProperty("layout", (new ObjectMapper()).writeValueAsString(bean.getLayout()));
+            } catch (Exception e) {
+                log.warn("Could not save dashboard config for user [{}], {}", userId, e.toString());
+                preferencesService.cancel(preference);
+                preference = null;
+            } finally {
+                if (preference != null) preferencesService.commit(preference);
+            }
         }
 	}
 
@@ -246,15 +289,22 @@ public class DashboardController extends AbstractSakaiApiController {
                 bean.setTemplate(defaultCourseLayout);
             } else {
                 Map<String, Object> dashboardConfig = (new ObjectMapper()).readValue(dashboardConfigJson, HashMap.class);
-                bean.setLayout((List<String>) dashboardConfig.get("layout"));
+                List<String> layout = (List<String>) dashboardConfig.get("layout");
+                if (!serverConfigurationService.getBoolean(PortalConstants.PROP_DASHBOARD_TASKS_ENABLED, false))  {
+                    layout.remove("tasks");
+                }
+                bean.setLayout(layout);
                 bean.setTemplate((Integer) dashboardConfig.get("template"));
             }
             bean.setEditable(securityService.isSuperUser() || securityService.unlock(SiteService.SECURE_UPDATE_SITE, site.getReference()));
-            String imageUrl = site.getIconUrl();
+            String imageUrl = site.getProperties().getProperty(Site.PROP_COURSE_IMAGE_URL);
             if (StringUtils.isBlank(imageUrl)) {
                 imageUrl = "/webcomponents/images/central_park_lamp.jpg";
             }
             bean.setImage(imageUrl);
+            bean.setLayout1ThumbnailUrl("/webcomponents/images/layout1.png");
+            bean.setLayout2ThumbnailUrl("/webcomponents/images/layout2.png");
+            bean.setLayout3ThumbnailUrl("/webcomponents/images/layout3.png");
         } catch (IdUnusedException idue) {
             log.error("No site found for {}", siteId);
         } catch (Exception e) {
@@ -300,21 +350,126 @@ public class DashboardController extends AbstractSakaiApiController {
 
             ContentResourceEdit edit;
             try {
-                edit = contentHostingService.editResource(collectionId + "site_icon_image.png");
+                edit = contentHostingService.editResource(collectionId + COURSE_IMAGE_FILE);
             } catch (IdUnusedException | PermissionException e) {
-                edit = contentHostingService.addResource(collectionId, "site_icon_image", ".png", 1);
+                edit = contentHostingService.addResource(collectionId, COURSE_IMAGE, ".png", 1);
             }
             edit.setContent(fi.get());
             edit.setContentLength(fi.getSize());
             edit.setContentType(fi.getContentType());
             contentHostingService.commitResource(edit, NotificationService.NOTI_NONE);
             Site site = siteService.getSite(siteId);
-            site.setIconUrl(edit.getUrl());
+            site.getProperties().addProperty(Site.PROP_COURSE_IMAGE_URL, edit.getUrl());
             siteService.save(site);
             return edit.getUrl();
         } catch (Exception e) {
-            log.error("Failed to update image for site {}", siteId, e);
+            log.error("Failed to update image for site {}: {}", siteId, e.toString());
             throw e;
         }
-	}
+    }
+
+    @Override
+    public String getLabel() {
+        return "dashboard";
+    }
+
+    @Override
+    public boolean parseEntityReference(String reference, Reference ref) {
+
+        if (!reference.startsWith(REFERENCE_ROOT)) {
+            return false;
+        }
+
+        return true;
+    }
+
+    @Override
+    public Optional<String> getTool() {
+        return Optional.of(DASHBOARD_TOOL_ID);
+    }
+
+    @Override
+    public String[] myToolIds() {
+        return new String[] { DASHBOARD_TOOL_ID };
+    }
+
+    @Override
+    public Map<String, String> transferCopyEntities(String fromContext, String toContext, List<String> ids, List<String> options) {
+
+        try {
+            Site fromSite = siteService.getSite(fromContext);
+            String fromConfig = fromSite.getProperties().getProperty("dashboard-config");
+            if (fromConfig != null) {
+                Site toSite = siteService.getSite(toContext);
+                toSite.setDescription(fromSite.getDescription());
+                toSite.getProperties().addProperty("dashboard-config", fromConfig);
+                siteService.save(toSite);
+            }
+        } catch (IdUnusedException idue) {
+            log.error("No site found for {} or {}", fromContext, toContext);
+        } catch (Exception e) {
+            log.error("Failed to copy the dashboard config: {}", e.toString());
+        }
+
+        Map<String, String> map = Collections.EMPTY_MAP;
+
+        String fromCollectionId = contentHostingService.getSiteCollection(fromContext);
+
+        if (fromCollectionId == null) return map;
+
+        try {
+            contentHostingService.checkCollection(fromCollectionId);
+        } catch (Exception e) {
+            log.warn("No access to site {}'s content collection", fromContext);
+            return map;
+        }
+
+        String toCollectionId = contentHostingService.getSiteCollection(toContext);
+
+        try {
+            contentHostingService.checkCollection(toCollectionId);
+        } catch (Exception e) {
+            try {
+                contentHostingService.commitCollection(contentHostingService.addCollection(toCollectionId));
+            } catch (Exception e2) {
+                log.error("Failed to add collection {}: {}", toCollectionId, e2.toString());
+            }
+        }
+
+        String sourceId = fromCollectionId + COURSE_IMAGE_FILE;
+
+        try {
+            contentHostingService.getResource(sourceId);
+        } catch (Exception e) {
+            // This is okay. No course image in the source site, not a problem.
+            return map;
+        }
+
+        String targetId = toCollectionId + COURSE_IMAGE_FILE;
+
+        // Attempt to remove the current course image
+        try {
+            contentHostingService.removeResource(targetId);
+        } catch (Exception e) {
+            // This is okay. Maybe there wasn't a course image.
+        }
+
+        try {
+            String newId = contentHostingService.copy(sourceId, targetId);
+            ContentResource newResource = contentHostingService.getResource(newId);
+            Site toSite = siteService.getSite(toContext);
+            toSite.getProperties().addProperty(Site.PROP_COURSE_IMAGE_URL, newResource.getUrl());
+            siteService.save(toSite);
+        } catch (Exception e) {
+            log.error("Failed to copy dashboard image resource: {}", e.toString());
+        }
+
+        return map;
+    }
+
+    @Override
+    public Map<String, String> transferCopyEntities(String fromContext, String toContext, List<String> ids, List<String> options, boolean cleanup) {
+
+        return transferCopyEntities(fromContext, toContext, ids, options);
+    }
 }
